--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 		<nav class="siteNav">
 			<ol class="tab-items">
 				<li class="active"><span>个性推荐</span></li>
-				<li ><span>主播电台</span></li>
+				<li ><span>视频推荐</span></li>
+				<li ><span>快速搜索</span></li>
 			</ol>
 		</nav>
 		<ol class="tabContent">
@@ -143,6 +144,18 @@
 			</li>
 			<li>
 				text2
+			</li>
+			<li>
+				<div class="inputWrap">
+					<input type="" name="" id="searchSong" value="" style="border:1px solid #333;" />
+				</div>
+				<div id="output" class="output">
+					<ul>
+						<li>
+							
+						</li>
+					</ul>
+				</div>
 			</li>
 		</ol>
 	</body>
